--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 	  menu was being destroyed since it was remaining part of the frame
 	  that was being destroyed whenever the selector changed.  It gets
 	  ref-counted, disconnected, and destroyed correctly now.
+	* mkinstalldirs: automake 1.8 stopped including "mkinstalldirs", but
+	  intltool still uses it.  We'll need to keep this until intltool
+	  fixes the bug.  intltool 0.31 and earlier are all buggy.
 
 2004-07-09  Carl Hetherington  <inkscape@carlh.net>
 
