--- a/po/hu.po
+++ b/po/hu.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-07-10 01:28-0700\n"
-"PO-Revision-Date: 2004-07-10 11:30+0200\n"
+"PO-Revision-Date: 2004-07-10 11:32+0200\n"
 "Last-Translator: Arpad Biro <biro_arpad@yahoo.com>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 
 #: inkscape.desktop.in.h:1
 msgid "Inkscape SVG Vector Illustrator"
-msgstr "Inkscape - vektoros (SVG) rajzolóó"
+msgstr "Inkscape - vektoros (SVG) rajzoló"
 
 #: inkscape.desktop.in.h:2
 msgid "SVG Vector Illustrator"
