--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,22 @@
 	  small section that validates preferences for valid extension names.
 	* src/dialogs/filedialog-win32.cpp: corrected an assert test, and
 	  changed dialog to take the passed window title.
+	* autogen.sh, config.h.mingw, configure.in, src/Makefile_insert, 
+      src/help.cpp, src/inkscape-stock.cpp, src/inkscape.cpp, src/main.cpp, 
+	  src/make.dep, src/make.files, src/path-prefix.h, src/prefix.cpp, 
+	  src/prefix.h, src/dialogs/stroke-style.cpp, 
+	  src/extension/Makefile_insert, src/extension/init.cpp, 
+	  src/extension/implementation/Makefile_insert, 
+	  src/extension/implementation/script.cpp, 
+	  src/extension/internal/Makefile_insert, src/helper/stock-items.cpp, 
+      src/widgets/icon.cpp:
+	Cleaned up all the path #define's and usage.  In the process found at
+	least 3 separate bugs associated with file locations.  This should
+	hopefully work for Win32 as well.  Bottom line in this change: don't use
+	INKSCAPE_DATADIR anywhere except in "path-prefix.h".  This includes
+	an update to the autopackage code as well with fixes so that
+	a change to "--enable-binreloc" will get recompiled correctly.  These
+	changes should address bug #978391.
 
 2004-07-11  Carl Hetherington  <inkscape@carlh.net>
 
