--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/decimal-round.h (decimal_round): New file, new function.
+	* src/round.h (decimal_round): New file, new function.
+	* src/Makefile_insert: Add to libinkpost_a_SOURCES.
+
 2004-07-11  MenTaLguY  <mental@rydia.net>
 
 	* src/document.h, src/document-undo.cpp:
