--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-13  MenTaLguY  <mental@rydia.net>
+
+	* src/make.exclude: omit extension/script/js/js.c from build
+
 2004-07-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/dialogs/rdf.cpp: Don't add dc:description entry to SVG files.
